# cpp-game-engine

./: .gitignore  .gitmodules  README.md
ambient-game-engine/: CMakeLists.txt  README.md  conanfile.txt
ambient-game-engine/include/: Ambient.h  Application.h  Component.h  Controller.h  EntryPoint.h  Event.h  GameObject.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Log.h  TimeStep.h  Timestep.h  Types.h  Window.h  ambient.h  application.h  entry_point.h  event.h  layer.h  layer_stack.h  log.h  test.h  window.h
ambient-game-engine/include/Renderer/: Buffer.h  Camera.h  CameraController.h  GraphicsContext.h  OpenGLContext.h  OpenGLRenderer.h  Renderer.h  Renderer2D.h  Shader.h  SubTexture2D.h  Texture.h  TextureAtlas2D.h  VertexArray.h
ambient-game-engine/src/: Application.cpp  Buffer.cpp  Component.cpp  GameObject.cpp  Input.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  OpenGLBuffer.cpp  OpenGLContext.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  Shader.cpp  SubTexture.cpp  Texture.cpp  TextureAtlas2D.cpp  VertexArray.cpp  Window.cpp  application.cpp  layer.cpp  layer_stack.cpp  log.cpp  test.cpp  window.cpp
ambient-game-engine/src/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
ambient-sandbox-application/: .gitignore  App.cpp  CMakeLists.txt  README.md
ambient-sandbox-application/assets/shaders/: Combined.glsl  FlatColor1.glsl  FlatColor2.glsl  FlatColor3.glsl  Texture.glsl
ambient-sandbox-application/demos/: ParticleSystem.cpp  ParticleSystem.h  Platformer2D.h  RPGWorld.cpp  RPGWorld.h  RotatingQuad.cpp  RotatingQuad.h  SimpleSquareAndTriangle.cpp  SimpleSquareAndTriangle.h
ambient-sandbox-application/demos/PlatformGame2D/: LevelManager.cpp  LevelManager.h  PlatformGame2D.cpp  PlatformGame2D.h  Player.cpp  Player.h
ambient-sandbox-application/demos/PlatformGame2D/assets/levels/: level1.txt
ambient-sandbox-application/include/layers/: SandboxApp2D.h  SquareAndTriangle.h
ambient-sandbox-application/src/: App.cpp  Platformer2D.cpp  app.cpp
ambient-sandbox-application/src/layers/: SandboxApp2D.cpp  SquareAndTriangle.cpp
